Uploaded File Link

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <h1>DeskShot</h1>
 <div id="shot">
     <button>Take Shot</button><br />
+    <span></span><br />
     <span></span>
 </div>
 <div id="close">close</div>
